[FE] fix: 메인 페이지 z-index 오류 수정

--- a/frontend/src/css/main.module.css
+++ b/frontend/src/css/main.module.css
@@ -182,7 +182,7 @@
   background-color: #ffffffa3;
 }
 .backgroundColorGradient {
-  background: linear-gradient(#ffffffc4, #9999994c);
+  background: linear-gradient(#ffffff74, #9999994c);
 }
 
 /* border */
